--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@aws-amplify/react-native": "^1.0.6",
+    "@aws-amplify/ui-react": "^6.0.5",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/netinfo": "^11.2.0",
+    "aws-amplify": "^6.0.6",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-get-random-values": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
